feat: add task runSingleNodeCluster